// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceDetailActions should render properly when creating new 1`] = `
<fi
  primary={
    Array [
      <Zo
        color="primary"
        icon={<Save />}
        onClick={[Function]}
        size="m"
    >
        Save
    </Zo>,
      <Zo
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </Zo>,
    ]
  }
  secondary={Array []}
/>
`;

exports[`DataSourceDetailActions should render properly when editing collaborative datasource 1`] = `
<fi
  primary={
    Array [
      <Zo
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </Zo>,
    ]
  }
  secondary={Array []}
/>
`;

exports[`DataSourceDetailActions should render properly when editing owned datasource 1`] = `
<fi
  primary={
    Array [
      <Zo
        color="primary"
        icon={<Save />}
        onClick={[Function]}
        size="m"
    >
        Save
    </Zo>,
      <Zo
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </Zo>,
    ]
  }
  secondary={
    Array [
      <Zo
        color="danger"
        icon={<Delete />}
        onClick={[Function]}
        size="m"
    >
        Delete
    </Zo>,
    ]
  }
/>
`;
